Add prediction log and router log proto (#19)
This PR adds prediction log and router log protobuf definition for
recording and publishing the prediction process within CaraML. Note that
the main changes are in [this
commit](https://github.com/caraml-dev/universal-prediction-interface/pull/19/commits/adeb40ebe6b27775aeae9430451a4ad49f7740c5).

High level idea is as follow:
- Each request to Turing router and Merlin model will be translated into
one `RouterLog` and `PredictionLog` respectively. That means, unlike
observation log which allow `ObservationLog` from different [row_id of
the same
prediction_id](https://github.com/caraml-dev/universal-prediction-interface/blob/0b87b176b580b72a90328c307400cc2253b3ae43/proto/caraml/upi/v1/observation_log.proto#L44),
`RouterLog` and `PredictionLog` will contains all `row_id` of the same
`prediction_id` . The reason for not extracting multiple row_id into
several `RouterLog` and `PredictionLog` is to minimise the number of
published logs.
- All of the [UPI
Table](https://github.com/caraml-dev/universal-prediction-interface/blob/0b87b176b580b72a90328c307400cc2253b3ae43/proto/caraml/upi/v1/table.proto#L10)
is stored as `google.protobuf.Struct` . The primary reason is because we
want to use JSON as the representation of the table which allow better
schema flexibility. However, using the existing UPI Table protobuf
directly is suboptimal because of its verbosity when encoded as JSON
using `protojson`. To solve this, we'll encode all table as slightly
modified pandas JSON split format. For example following table (let's
call it `my-table`).

| row_id  | feature_1 | feature_2 | feature_3 |
| ------- | --------- | --------- | --------- |
| 1            | 111           | yes          | 1.1.           |
| 2           | 222          | no            | null         |

Will be encoded as following JSON

```
{
  "name" : "my-table",
  "columns": ["feature_1", "feature_2", "feature_3"],
  "column_types: ["I
