# gen/go/openapi/model_upiv1_value.go
@@ -1,0 +1,223 @@
+/*
+caraml/upi/v1/upi.proto
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: version not set
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// Upiv1Value Value of a cell within a table. Value is nullable.
+type Upiv1Value struct {
+	DoubleValue *float64 `json:"doubleValue,omitempty"`
+	IntegerValue *string `json:"integerValue,omitempty"`
+	StringValue *string `json:"stringValue,omitempty"`
+	IsNull *bool `json:"isNull,omitempty"`
+}
+
+// NewUpiv1Value instantiates a new Upiv1Value object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewUpiv1Value() *Upiv1Value {
+	this := Upiv1Value{}
+	return &this
+}
+
+// NewUpiv1ValueWithDefaults instantiates a new Upiv1Value object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewUpiv1ValueWithDefaults() *Upiv1Value {
+	this := Upiv1Value{}
+	return &this
+}
+
+// GetDoubleValue returns the DoubleValue field value if set, zero value otherwise.
+func (o *Upiv1Value) GetDoubleValue() float64 {
+	if o == nil || o.DoubleValue == nil {
+		var ret float64
+		return ret
+	}
+	return *o.DoubleValue
+}
+
+// GetDoubleValueOk returns a tuple with the DoubleValue field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Upiv1Value) GetDoubleValueOk() (*float64, bool) {
+	if o == nil || o.DoubleValue == nil {
+		return nil, false
+	}
+	return o.DoubleValue, true
+}
+
+// HasDoubleValue returns a boolean if a field has been set.
+func (o *Upiv1Value) HasDoubleValue() bool {
+	if o != nil && o.DoubleValue != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetDoubleValue gets a reference to the given float64 and assigns it to the DoubleValue field.
+func (o *Upiv1Value) SetDoubleValue(v float64) {
+	o.DoubleValue = &v
+}
+
+// GetIntegerValue returns the IntegerValue field value if set, zero value otherwise.
+func (o *Upiv1Value) GetIntegerValue() string {
+	if o == nil || o.IntegerValue == nil {
+		var ret string
+		return ret
+	}
+	return *o.IntegerValue
+}
+
+// GetIntegerValueOk returns a tuple with the IntegerValue field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Upiv1Value) GetIntegerValueOk() (*string, bool) {
+	if o == nil || o.IntegerValue == nil {
+		return nil, false
+	}
+	return o.IntegerValue, true
+}
+
+// HasIntegerValue returns a boolean if a field has been set.
+func (o *Upiv1Value) HasIntegerValue() bool {
+	if o != nil && o.IntegerValue != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetIntegerValue gets a reference to the given string and assigns it to the IntegerValue field.
+func (o *Upiv1Value) SetIntegerValue(v string) {
+	o.IntegerValue = &v
+}
+
+// GetStringValue returns the StringValue field value if set, zero value otherwise.
+func (o *Upiv1Value) GetStringValue() string {
+	if o == nil || o.StringValue == nil {
+		var ret string
+		return ret
+	}
+	return *o.StringValue
+}
+
+// GetStringValueOk returns a tuple with the StringValue field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Upiv1Value) GetStringValueOk() (*string, bool) {
+	if o == nil || o.StringValue == nil {
+		return nil, false
+	}
+	return o.StringValue, true
+}
+
+// HasStringValue returns a boolean if a field has been set.
+func (o *Upiv1Value) HasStringValue() bool {
+	if o != nil && o.StringValue != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetStringValue gets a reference to the given string and assigns it to the StringValue field.
+func (o *Upiv1Value) SetStringValue(v string) {
+	o.StringValue = &v
+}
+
+// GetIsNull returns the IsNull field value if set, zero value otherwise.
+func (o *Upiv1Value) GetIsNull() bool {
+	if o == nil || o.IsNull == nil {
+		var ret bool
+		return ret
+	}
+	return *o.IsNull
+}
+
+// GetIsNullOk returns a tuple with the IsNull field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Upiv1Value) GetIsNullOk() (*bool, bool) {
+	if o == nil || o.IsNull == nil {
+		return nil, false
+	}
+	return o.IsNull, true
+}
+
+// HasIsNull returns a boolean if a field has been set.
+func (o *Upiv1Value) HasIsNull() bool {
+	if o != nil && o.IsNull != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetIsNull gets a reference to the given bool and assigns it to the IsNull field.
+func (o *Upiv1Value) SetIsNull(v bool) {
+	o.IsNull = &v
+}
+
+func (o Upiv1Value) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.DoubleValue != nil {
+		toSerialize["doubleValue"] = o.DoubleValue
+	}
+	if o.IntegerValue != nil {
+		toSerialize["integerValue"] = o.IntegerValue
+	}
+	if o.StringValue != nil {
+		toSerialize["stringValue"] = o.StringValue
+	}
+	if o.IsNull != nil {
+		toSerialize["isNull"] = o.IsNull
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableUpiv1Value struct {
+	value *Upiv1Value
+	isSet bool
+}
+
+func (v NullableUpiv1Value) Get() *Upiv1Value {
+	return v.value
+}
+
+func (v *NullableUpiv1Value) Set(val *Upiv1Value) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableUpiv1Value) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableUpiv1Value) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableUpiv1Value(val *Upiv1Value) *NullableUpiv1Value {
+	return &NullableUpiv1Value{value: val, isSet: true}
+}
+
+func (v NullableUpiv1Value) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableUpiv1Value) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
